# xiandao_xiao

./: .gitignore  README.md  build_teacher_labels.py  compressed_llama_classifier.py  local_eval.py  predictor.py  pyproject.toml  report.md  student_model.py  train_student.py
scoring/: __init__.py  aggregate_lite.py  labels.py  metrics.py  parse_label.py
